--- a/0407_css/test17_1.html
+++ b/0407_css/test17_1.html
@@ -9,8 +9,8 @@
     #layer1 {
       width: 600px;
       height: 400px;
-      /* background-color: aqua; */
-      background-image: url("../images/6.jpg");
+      background-color: aqua;
+      /* background-image: url("../images/6.jpg"); */
     }
     #tbl1, #tbl2, #tbl3 {
       border: 1px solid #000;
