--- a/0407_css/test3.html
+++ b/0407_css/test3.html
@@ -10,7 +10,7 @@
 
 </head>
 <body>
-    <h2> 인라인스타일시트 연습<inner style)</h2>
+    <h2> 인라인스타일시트 연습(inner style)</h2>
     <p>1.안녕하세요</p>
     <h1>2.안녕하세요</h1>
     <h2>3.안녕하세요</h2>
