--- a/0413_js/16.html
+++ b/0413_js/16.html
@@ -1,23 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <script src="16.js"></script>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>날짜함수(test17.html)</title>
+  <script src="16.js"></script>
 </head>
 <body>
-    <h2>날짜 비교함수</h2>
-    <p>
-        <input type="text" name="date1" id="date1"/>
-        <input type="button" value="현재날짜" onclick="fCheck1()"/>
-    </p>
-    <p>
-        <input type="text" name="date2" id="date2"/>
-        <input type="button" value="날짜비교" onclick="fCheck2()"/>
-    </p>
-    <hr>
-    <div id="demo"></div>
+  <h2>날짜 비교함수</h2>
+  <p>
+    <input type="text" name="date1" id="date1"/>
+    <input type="button" value="현재날짜" onclick="fCheck1()"/>
+  </p>
+  <p>
+    <input type="text" name="date2" id="date2"/>
+    <input type="button" value="날짜비교" onclick="fCheck2()"/>
+    <input type="button" value="날짜비교2" onclick="fCheck3()"/>
+  </p>
+  <hr/>
+  <div id="demo"></div>
 </body>
 </html>
