--- a/0414_regular expression/7.html
+++ b/0414_regular expression/7.html
@@ -26,7 +26,7 @@
 <body onLoad="onLoadFunc()" onunload="onunLoadFunc()">
     <h2>윈도우 정보보기(screen객체)</h2>
     
-    <input type="button" value="해당도보기" onclick="diviceCheck()" />
+    <input type="button" value="해상도보기" onclick="diviceCheck()" />
     <hr>
     <div id="demo"></div>
 </body>
