--- a/0414_regular expression/hw.html
+++ b/0414_regular expression/hw.html
@@ -17,8 +17,15 @@
         전화번호 : 전화번호형식(지역번호(2~3)-국번호(3~4)-전화번호(4))
         주민번호 : 숫자와 구분자(-)만 오되 앞쪽 6자 - 뒷쪽 1자리(1~4까지의 숫자)
 
-        아이디형식 예) ^/a-z0-9_/{4,20}$
-        전화번호형식 예> /\d{2,3}-/
+        아이디형식 예) /^[a-z0-9_]{4,20}$/;
+        비밀번호 : /^[a-zA-Z0-9_~!@#$%^&*()_+,./<>?[]{}]/;
+        닉네임 : /^[가-힣]/;
+        성명 : /^[가=힣a-zA-Z]/;
+        이메일 : /^[a-zA-Z0-9]@[a-zA-Z0-9]/;
+        홈페이지주소 : /[https?:\/\/(www\.)?[-a-zA-Z0-9@:%._\+~#=]{2,256}\.[a-z]{2,6}\b([-a-zA-Z0-9@:%_\+.~#()?&//=]*)]/;
+        전화번호형식 예> /^[\d]{2,3}-[\d]{3,4}-[\d]{4}/;
+        주민번호 : /^[0-9]{6}-[1-4]{1}[0-9]{6}/;
+        
         1.js참고
     -->
 </body>
