--- a/0407_css/formTag.html
+++ b/0407_css/formTag.html
@@ -31,6 +31,10 @@
         }
         #content5 {
             clear:both;
+            /* float 속성을 적용한 해당 객체의 다음에 오는 객체가 붙지 않게 하려면 어떻게 해야 할까?
+            바로 clear 속성을 사용 하면 된다.
+            both : 왼쪽, 오른쪽 모두 붙는 float 정렬을 취소한다.
+             */
         }
         #hh1 {
             padding: 50px;
